Update of the preprocessing

--- a/notebooks/02_preprocessing.ipynb
+++ b/notebooks/02_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "3f6dc7c3-d22a-4050-b0a7-54a049184bb7",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "4          No        0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,8 +209,6 @@
     "\n",
     "# Add the root folder to python path\n",
     "sys.path.append(os.path.abspath(\"../\"))\n",
-    "# Create directory if it doesn't exist\n",
-    "os.makedirs(\"data/processed\", exist_ok=True)\n",
     "\n",
     "from src.data_loader import load_data\n",
     "from src.config import NUM_FEATURES, CAT_FEATURES, TARGET, TEST_SIZE, RANDON_STATE\n",
@@ -232,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "6a312ec6-3300-48c5-aeb8-42b8636c5b4f",
    "metadata": {},
    "outputs": [],
@@ -252,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "5b30950b-3f3d-43b4-99e0-8d05369b5538",
    "metadata": {},
    "outputs": [],
@@ -283,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "2bca5135-0a94-46b4-b377-bde117aff6a9",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1047,7 @@
        "                                 ['Education', 'EmploymentType'])])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f507b5b2-1daa-4f72-a030-453771c49759",
    "metadata": {},
    "outputs": [],
@@ -1088,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "e7300c05-3cca-4b06-a7fc-5e1ae57e2525",
    "metadata": {},
    "outputs": [],
@@ -1119,15 +1117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "25fd7be2-9ad4-4311-acb1-2adc98f9f4ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_processed_df.to_csv(\"data/processed/X_train_processed.csv\", index=False)\n",
-    "X_test_processed_df.to_csv(\"data/processed/X_test_processed.csv\", index=False)\n",
-    "y_train.to_csv(\"data/processed/y_train.csv\", index=False)\n",
-    "y_test.to_csv(\"data/processed/y_test.csv\", index=False)"
+    "X_train_processed_df.to_csv(\"../data/processed/X_train_processed.csv\", index=False)\n",
+    "X_test_processed_df.to_csv(\"../data/processed/X_test_processed.csv\", index=False)\n",
+    "y_train.to_csv(\"../data/processed/y_train.csv\", index=False)\n",
+    "y_test.to_csv(\"../data/processed/y_test.csv\", index=False)"
    ]
   },
   {
