Update of models evaluation

--- a/notebooks/04_model_evaluation.ipynb
+++ b/notebooks/04_model_evaluation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "cc142944-209f-426c-a2a9-ee7b2d39c00e",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import joblib\n",
     "import pandas as pd\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "\n",
     "# Add the root folder to python path\n",
     "sys.path.append(os.path.abspath(\"../\"))\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "0acb0a1b-26d4-4e1a-8cd0-edda21e49c75",
    "metadata": {},
    "outputs": [
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "5121fb58-d3ac-44a4-b333-3feeb3d9d377",
    "metadata": {
     "scrolled": true
@@ -133,13 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "5265b001-ef79-4376-b32b-db7a7bf9194f",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -161,6 +158,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "abc9bf53-4a24-40ac-8e43-659e3ae884e2",
+   "metadata": {},
+   "source": [
+    "# ROC-AUC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "70106893-0cc0-4d33-a65f-6d234a6a42a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression ROC-AUC: 0.7001\n",
+      "Random Forest ROC-AUC: 0.6557\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict probabilities for the positive class\n",
+    "lr_probs = lr_pipeline.predict_proba(X_test_processed)[:, 1]\n",
+    "rf_probs = rf_pipeline.predict_proba(X_test_processed)[:, 1]\n",
+    "\n",
+    "# Calculate ROC-AUC\n",
+    "lr_auc = roc_auc_score(y_test, lr_probs)\n",
+    "rf_auc = roc_auc_score(y_test, rf_probs)\n",
+    "\n",
+    "print(f\"Logistic Regression ROC-AUC: {lr_auc:.4f}\")\n",
+    "print(f\"Random Forest ROC-AUC: {rf_auc:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "83458f63-3f19-4756-a366-72fd5e0d7139",
    "metadata": {},
    "source": [
@@ -171,14 +204,14 @@
     "    - Precision 0.8362 -> when LR predicts a positive class, it's usually correct.\n",
     "    - Recall 0.6327 -> misses a lot of actual positive cases\n",
     "    - F1-score 0.6987 -> harmonic mean -> moderate balance betwen precision and recall\n",
-    "LR is good at avoiding false positives(high precision) but not great at catching all positives (low recall)\n",
+    "    - ROC-AUC: 0.7001\n",
     "\n",
     "2. Random Forest (RF)\n",
     "    - Accuracy 0.8830-> much better than LR\n",
     "    - Precision 0.8362 -> slightly lower than LR but still strong\n",
     "    - Recall 0.8830 -> very good at capturing true positive\n",
     "    - F1-score 0.8362 -> balanced precision and recall\n",
-    "RF is overall much stronger, balanced performance, and captures positive well.\n",
+    "    - ROC-AUC: 0.6557\n",
     "\n",
     "3. LR vs RF\n",
     "    - LR is linear, struggles with complex patterns -> high precision but low recall\n",
@@ -186,8 +219,11 @@
     "\n",
     "4. Evaluation insight\n",
     "    - Improvement : 0.2503 with RF\n",
-    "    - RF is clearly the better candidate for further tuning or deployment\n",
-    "    - LR can still serve as a baseline reference for linear performance"
+    "    - Baseline RF has much higher overall performance (accuracy, recall, F1-score).\n",
+    "    - Its ROC-AUC is low, which indicates room for improvement in probability ranking.\n",
+    "    - Tuning RF can simultaneously improve accuracy and ROC-AUC.\n",
+    "    - LR can remain as a reference model for interpretation.\n",
+    "    - RF is clearly the better candidate for further tuning or deployment"
    ]
   },
   {
